--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "neo4j-driver": "^5.24.0",
     "lucide-react": "^0.263.1"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.18"
+    "eslint": "^9",
+    "eslint-config-next": "15.1.3",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.20"
   }
 }
